package base;

public interface FeeComponent {
    double getFee();
    String getDescription();
}
