classDiagram
    direction LR

    class FeeComponent {
        <<interface>>
        +getFee() double
        +getDescription() String
    }

    class TuitionFee {
        -tuitionAmount: double
        +TuitionFee(tuitionAmount: double)
        +getFee() double
        +getDescription() String
    }

    class FeeDecorator {
        <<abstract>>
        #feeComponent: FeeComponent
        +FeeDecorator(feeComponent: FeeComponent)
        +getFee() double
        +getDescription() String
    }

    class HostelFeeDecorator {
        -hostelFee: double
        +HostelFeeDecorator(feeComponent: FeeComponent, hostelFee: double)
        +getFee() double
        +getDescription() String
    }

    class ScholarshipDiscountDecorator {
        -discount: double
        +ScholarshipDiscountDecorator(feeComponent: FeeComponent, discount: double)
        +getFee() double
        +getDescription() String
    }

    class SportsFeeDecorator {
        -sportsFee: double
        +SportsFeeDecorator(feeComponent: FeeComponent, sportsFee: double)
        +getFee() double
        +getDescription() String
    }

    FeeComponent <|-- TuitionFee : implements
    FeeComponent <|-- FeeDecorator : implements
    FeeDecorator <|-- HostelFeeDecorator : extends
    FeeDecorator <|-- ScholarshipDiscountDecorator : extends
    FeeDecorator <|-- SportsFeeDecorator : extends

    FeeDecorator o-- "1" FeeComponent : wraps
